--- a/KnowledgeSystemWEB/src/index.html
+++ b/KnowledgeSystemWEB/src/index.html
@@ -6,8 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
+  <div class = "container-fluid">
+    <nav class = "navbar navbar-light bg-light row">
+      <a class = "navbar-brand" href="">Knowledge system accounting</a>
+    </nav>
+  </div>
   <app-root></app-root>
+  <footer class = "bg-light text-center fixed-bottom">
+    @ 2021 Copyright: sergiyyurko@gmail.com
+  </footer>
 </body>
 </html>
