Add technologies logic

--- a/KnowledgeSystemWEB/src/index.html
+++ b/KnowledgeSystemWEB/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class = "container-fluid">
     <nav class = "navbar navbar-light bg-light row">
-      <a class = "navbar-brand" href="">Knowledge system accounting</a>
+      <a class = "navbar-brand" href="/home">Knowledge system accounting</a>
     </nav>
   </div>
   <app-root></app-root>
