Add technologies displaying

--- a/KnowledgeSystemWEB/src/index.html
+++ b/KnowledgeSystemWEB/src/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <div class = "container-fluid">
-    <nav class = "navbar navbar-light bg-light row">
+    <nav class = "navbar navbar-light bg-info row">
       <a class = "navbar-brand" href="/home">Knowledge system accounting</a>
     </nav>
   </div>
   <app-root></app-root>
-  <footer class = "bg-light text-center fixed-bottom">
+  <footer class = "bg-info text-center fixed-bottom">
     @ 2021 Copyright: sergiyyurko@gmail.com
   </footer>
 </body>
