Add profile component

--- a/KnowledgeSystemWEB/src/index.html
+++ b/KnowledgeSystemWEB/src/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class = "container-fluid">
     <nav class = "navbar navbar-light bg-info row">
-      <a class = "navbar-brand" href="/home">Knowledge system accounting</a>
+      <a class = "navbar-brand text-light" href="/home">Knowledge system accounting</a>
     </nav>
   </div>
   <app-root></app-root>
-  <footer class = "bg-info text-center fixed-bottom">
+  <footer class = "bg-info text-center fixed-bottom text-light">
     @ 2021 Copyright: sergiyyurko@gmail.com
   </footer>
 </body>
